--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^2"
   }
 }
