add material ui navbar, react router PoC, Doges page

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "secret-gardens",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "@rails/webpacker": "3.5",
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.2",
