--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/icons": "^3.0.1",
     "@rails/webpacker": "3.5",
     "babel-preset-react": "^6.24.1",
+    "cloudinary-react": "^1.0.6",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
