--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@rails/webpacker": "3.5",
     "babel-preset-react": "^6.24.1",
     "cloudinary-react": "^1.0.6",
+    "material-ui": "^0.20.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-calendar": "^2.17.5",
     "react-dom": "^16.6.3",
+    "react-multiple-datepicker": "^0.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "webpack-cli": "^3.1.2"
