--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,12 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /public/packs
+/public/uploads
 /public/packs-test
 /node_modules
 yarn-debug.log*
 .yarn-integrity
 
 .env
+
+
