--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-calendar": "^2.17.5",
+    "react-day-picker": "^7.2.4",
     "react-dom": "^16.6.3",
+    "react-helmet": "^5.2.0",
     "react-multiple-datepicker": "^0.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
